# Cprj_CH395-RCC-UART-SPI

./: .gitignore  CMakeLists.txt  all  compile_commands.json  readme.md
app/: CMakeLists.txt  entry.c  main.c
bsp/: CMakeLists.txt  bsp_ch395_pins.h  bsp_spi.h  bsp_uart_dma.c  bsp_uart_dma.h
cmake/: flags.cmake  link.cmake  mcu_link.cmake  postbuild.cmake  sources.cmake  toolchain.cmake
mcu/: CMakeLists.txt  system_stm32f1xx.c  system_stm32f1xx.h
middleware/ch395/: CMakeLists.txt  ch395_cmd.h
start/: CMakeLists.txt  stm32f1xx_it.c  sys_stubs.c
start/inc/: cmsis_gcc.h
